--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,9 +8,9 @@ phases:
     commands:
       - echo "Pre build commands for deploying backend to ECR"
       - aws --version
-      - $(aws ecr get-login --no-include-email --region your-region)
-      - REPOSITORY_URI=
-      - IMAGE_TAG=
+      - $aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 471112996721.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=471112996721.dkr.ecr.us-east-1.amazonaws.com/cloud-backend
+      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
       - echo "Installing Python dependencies"
