--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ phases:
       - echo "Logging in to AWS ECR"
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 471112996721.dkr.ecr.us-east-1.amazonaws.com
-      - export REPOSITORY_URI=471112996721.dkr.ecr.us-east-1.amazonaws.com/cloud-backend
-      - export IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+      - REPOSITORY_URI=471112996721.dkr.ecr.us-east-1.amazonaws.com/cloud-backend
+      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
 
   install:
     runtime-versions:
@@ -30,7 +30,7 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo "Writing image definition file..."
-      - export DOCKER_CONTAINER_NAME=backend-container
+      - DOCKER_CONTAINER_NAME=backend-container
       - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - echo "Printing imagedefinitions.json"
       - cat imagedefinitions.json
